<resources>
    <string name="app_name">Bệnh viện tư</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Trang chủ</string>
    <string name="refresh">Làm mới</string>
    <string name="search">Tìm kiếm</string>
    <string name="txtGreeting">Xin chào, %s</string>
    <!--    <string name="tvSuggestLogin"><u>Đăng nhập</u> để có thể đặt lịch khám</string>-->
    <string name="tvSuggestLogin">Đăng nhập để có thể đặt lịch khám</string>
    <string name="services">Dịch vụ</string>
    <string name="tvMakeAnAppointment">Đặt khám ngay</string>
    <string name="welcome_to_private_hospital">Chào mừng bạn đến Bệnh viện tư</string>
    <string name="txtTvDoctorTitle">Bác sĩ ơi</string>
    <string name="txtTvDoctorContent">Kết nối với các bác sĩ chuyên khoa đầu ngành</string>
    <string name="txtTvService">Dịch vụ y tế</string>
    <string name="txtTvHospital">Cơ sở</string>
    <string name="txtTVAppointmentScheduleTitle">Lịch khám hôm nay</string>
    <string name="txtTVShowAll"><![CDATA[>>Xem tất cả]]></string>
    <string name="txtTVNoAppointmentSchedule">Hôm nay, chưa có lịch khám nào…</string>
    <string name="txtTVTopHospitalTitle">Cơ sở hàng đầu</string>
    <string name="doctor">Bác sĩ</string>
    <string name="txtTVChooseDateTitle"><u>Ngày khám</u></string>
    <string name="txtTVChooseTimeTitle"><u>Giờ khám</u></string>
    <string name="tomorrow">Buổi sáng</string>
    <string name="afternoon">Buổi chiều</string>
    <string name="hours">Giờ</string>
    <string name="minutes">Phút</string>
    <string name="timeTitle">Thời gian:</string>
    <string name="fullNameTitle">Họ tên:</string>
    <string name="personalInforTitle">Thông tin cá nhân</string>
    <string name="phoneNumberTitle">Số điện thoại:</string>
    <string name="sexTitle">Giới tính:</string>
    <string name="doctorInfoTitle">Thông tin bác sĩ</string>
    <string name="workPlaceTitle">Nơi làm việc:</string>
    <string name="majorTitle">Chuyên khoa:</string>
    <string name="describeTitle">Mô tả:</string>
    <string name="addressTitle">Địa chỉ:</string>
    <string name="appreciateTitle">Đánh giá:</string>
    <string name="txtTVShowInMap"><![CDATA[>>Xem trên Google Map]]></string>
    <string name="priceTitle">Đơn giá:</string>
    <string name="txtBtnAppointment">Đặt lịch</string>
    <string name="login">Đăng nhập</string>
    <string name="phoneNumber">Số điện thoại</string>
    <string name="passwordHint">Mật khẩu</string>
    <string name="remember">Ghi nhớ</string>
    <string name="txtLinkToRegister"><u><i>Chưa có tài khoản?</i></u></string>
    <string name="register">Đăng ký</string>
    <string name="txtLinkToLogin"><u><i>Đã có tài khoản?</i></u></string>
    <string name="rePasswordHint">Nhập lại mật khẩu</string>
    <string name="txtAgreeRules">Tôi đồng ý với các </string>
    <string name="txtLinkToRules"><u><i>điều khoản sử dụng</i></u>.</string>
    <string name="appointmentScheduleTitle">Lịch khám đã đặt</string>
    <string name="setting">Cài đặt</string>
    <string name="greeting">Xin chào,</string>
    <string name="user">quý khách</string>
    <string name="logout">Đăng xuất</string>
    <string name="save">Lưu</string>
    <string name="txtNoAppointment">Bạn chưa đặt lịch khám nào...</string>
    <string name="majorInItemDoctor">Chuyên khoa: %s</string>
    <string name="hotline">Hotline:</string>
    <string name="website">Website:</string>
    <string name="email">Email:</string>
    <string name="fragmentDetailHospitalTitle">Thông tin bệnh viện</string>
    <string name="txtFragmentDetailServiceTitle">Thông tin dịch vụ</string>
    <string name="txtTypeOfMoney">(vnđ)</string>
    <string name="txtPhoneNumberIsEmpty">Số điện thoại không thể bỏ trống!</string>
    <string name="txtPasswordNoCorrect">Mật khẩu có ít nhất 8 ký tự, 1 ký tự in hoa, 1 chữ số.</string>
    <string name="txtRePasswordNoCorrect">Chưa khớp với mật khẩu đã nhập!</string>
    <string name="txtEnterOTPCode">Nhập mã OTP</string>
    <string name="confirmPhoneNumber">Xác thực số điện thoại</string>
    <string name="txtNoteOTP"><i>(Mã OTP chỉ tồn tại trong 60s)</i></string>
    <string name="txtOTPErrorTitle">Mã OTP lỗi</string>
    <string name="txtOTPErrorContent">Mã OTP chưa chính xác!</string>
    <string name="txtLoginError">Đăng nhập không thành công!</string>
    <string name="txtLoginErrorMessage">Số điện thoại/Mật khẩu không chính xác!!!</string>
    <string name="txtAccountErrorMessage">Số điện thoại chưa đăng ký…</string>
    <string name="txtShortcutTitle">Lối tắt</string>
    <string name="txtRemoveAppointmentButton">Hủy lịch khám</string>
    <string name="txtTVDateTimeTitle">Lịch khám:</string>
    <string name="txtDetailAppointmentFragmentTitle">Chi tiết lịch khám</string>
    <string name="txtRemoveAppointmentTitle">Hủy lịch khám</string>
    <string name="txtConfirmRemoveAppointment">Bạn chắc chắn muốn hủy lịch khám này?</string>
    <string name="txtConfirm">Xác nhận</string>
    <string name="txtCancel">Hủy</string>
    <string name="txtRemoveNote"><i>*Chỉ có thể hủy lịch khám trước ít nhất 12 tiếng</i></string>
    <string name="txtSaveSuccessful">Lưu thông tin mới thành công.</string>
    <string name="txtSaveFailure">Lưu thông tin mới không thành công.</string>
    <string name="txtSetAppointmentSuccessful">Đặt lịch khám thành công!</string>
    <string name="txtSetAppointmentFailure">Đặt lịch khám không thành công…</string>
    <string name="txtAddAppointmentTitle">Xác nhận đặt lịch</string>
    <string name="txtAddAppointmentContent">"Bạn chắc chắn muốn đặt lịch khám dịch vụ này vào lúc: %s?"</string>
    <string name="txtSetAppointment">Đặt lịch khám</string>
    <string name="txtNoteLoginRequirement">Bạn cần đăng nhập, để có thể đặt lịch khám!!!</string>
    <string name="txtStatusTitle">Trạng thái:</string>
    <string name="txtNoResultSearch">Không tìm thấy kết quả tương ứng nào với <i>%s</i>…</string>
    <string name="txtHaveAppointment">Bạn có lịch khám vào lúc: %s</string>


    <string-array name="appointmentStatus">
        <item>Chờ xác nhận</item>
        <item>Đã xác nhận</item>
        <item>Đã khám</item>
        <item>Đã bỏ lỡ</item>
    </string-array>
</resources>