<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/home" />

        <item
            android:id="@+id/personalInfoFragment"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/personalInforTitle" />

        <item
            android:id="@+id/historyFragment"
            android:icon="@drawable/baseline_history_24"
            android:title="@string/appointmentScheduleTitle" />
    </group>

    <group android:id="@+id/group2">
        <item
            android:id="@+id/settingFragment"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/setting" />
    </group>

    <item
        android:id="@+id/loginFragment"
        android:icon="@drawable/baseline_login_24"
        android:title="@string/login" />
</menu>