<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.privatehospital.homescreen.ui.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_searchFragment"
            app:destination="@id/searchFragment" />
        <action
            android:id="@+id/action_homeFragment_to_listObjectsFragment"
            app:destination="@id/listObjectsFragment" />
        <action
            android:id="@+id/action_homeFragment_to_appointmentFragment"
            app:destination="@id/appointmentFragment" />
    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.privatehospital.homescreen.ui.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search">
        <argument
            android:name="objectTitle"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/listObjectsFragment"
        android:name="com.example.privatehospital.homescreen.ui.ListObjectsFragment"
        android:label=""
        tools:layout="@layout/fragment_list_objects">
        <action
            android:id="@+id/action_listObjectsFragment_to_searchFragment"
            app:destination="@id/searchFragment" />
        <argument
            android:name="objectTitle"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/appointmentFragment"
        android:name="com.example.privatehospital.homescreen.ui.AppointmentFragment"
        android:label="Chọn thời gian"
        tools:layout="@layout/fragment_appointment" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.privatehospital.homescreen.ui.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
    </fragment>
    <fragment
        android:id="@+id/personalInfoFragment"
        android:name="com.example.privatehospital.homescreen.ui.PersonalInfoFragment"
        android:label="@string/personalInforTitle"
        tools:layout="@layout/fragment_personal_info" />
    <fragment
        android:id="@+id/settingFragment"
        android:name="com.example.privatehospital.homescreen.ui.SettingFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_setting" />
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.privatehospital.homescreen.ui.RegisterFragment"
        android:label="@string/register"
        tools:layout="@layout/fragment_register" />
</navigation>