<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/DefaultMargin"
    tools:context=".homescreen.ui.fragment.PersonalInfoFragment">

    <TextView
        android:id="@+id/tvTitle"
        style="@style/TextAppearance.PrivateHospital.Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/DefaultMargin"
        android:text="@string/personalInforTitle"
        android:textAlignment="center"
        android:textColor="@color/blue116696"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutEdtFullName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/DefaultMargin"
        app:boxBackgroundColor="@color/blueC6E6F8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtFullName"
            style="@style/TextAppearance.PrivateHospital.Content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fullNameTitle"
            android:inputType="text"
            tools:text="@tools:sample/full_names" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutEdtPhoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/DefaultMargin"
        app:boxBackgroundColor="@color/blueC6E6F8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutEdtFullName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPhoneNumber"
            style="@style/TextAppearance.PrivateHospital.Content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/phoneNumberTitle"
            android:inputType="phone"
            android:textColor="@color/gray717171"
            tools:text="@tools:sample/us_phones" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/DefaultMargin"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutEdtPhoneNumber" />

    <TextView
        android:id="@+id/tvHistoryTitle"
        style="@style/TextAppearance.PrivateHospital.Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/appointmentScheduleTitle"
        android:textSize="@dimen/TooMediumTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSave" />

    <TextView
        android:id="@+id/tvNoAppointment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/DefaultMargin"
        android:layout_marginTop="@dimen/DefaultMargin"
        android:text="@string/txtNoAppointment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHistoryTitle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAppointment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/DefaultMargin"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHistoryTitle" />
</androidx.constraintlayout.widget.ConstraintLayout>